modify index page

--- a/wechat_web/app.json
+++ b/wechat_web/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/userindex/userindex",
     "pages/userinfo/userinfo",
     "pages/experiencing/experiencing"
   ],
